# ralph

./: .gitignore  .improvements-prd.md.bak  CONTRIBUTING.md  Cargo.toml  LICENSE  PRD-10-hardening.md  README.md
.github/workflows/: ci.yml  release.yml
docs/: USAGE.md
examples/: hello-world.md
examples/templates/: add-tests.md  code-review.md  security-audit.md
src/: cli.rs  config.rs  hooks.rs  logs.rs  main.rs  notify.rs  rate_limit.rs  stop.rs  templates.rs
src/agents/: api.rs  claude.rs  codex.rs  gemini.rs  mod.rs  opencode.rs
src/git/: mod.rs
src/orchestrator/: mod.rs
src/parser/: mod.rs
src/state/: mod.rs
src/tui/: mod.rs
src/watch/: mod.rs
src/watcher/: mod.rs
tests/: PRD.md
