[package]
name = "ralph-cli"
version = "0.1.0"
edition = "2021"
authors = ["Sean Shmulevich"]
description = "Orchestrates AI coding agents in isolated loops to implement PRD features"
license = "MIT"
repository = "https://github.com/Sean-Shmulevich/ralph"
homepage = "https://github.com/Sean-Shmulevich/ralph"
keywords = ["ai", "coding-agent", "prd", "automation", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ralph"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
ratatui = "0.29"
crossterm = "0.28"
nix = { version = "0.29", features = ["signal"] }
dirs = "6.0.0"
